k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anime-b-s
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: anime-b
