k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "tmrdl.animes.com"
    secretName: anime-tls
  rules:
  - host: "tmrdl.animes.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: anime-b-s
            port:
              number: 8080
